# vertec-app-public

./: .gitignore  README.md
backend/authentication/: README.md
backend/data-storage/: README.md
backend/event-broker/: README.md
backend/infrastructure-deployment/: README.md
backend/microservices/registry/: README.md
backend/microservices/ui_api/: README.md
backend/microservices/vertex-management-service/: Cargo.toml
backend/microservices/vertex-management-service/src/: main.rs
backend/microservices/vertex-management-service/src/plugins/: plugin_manager.rs
backend/microservices/vertex-management-service/src/vertices/: mod.rs  vertex.rs
backend/microservices/vertices/: README.md  start_server.bat
backend/microservices/vertices/src/: utils.rs
backend/microservices/vertices/src/plugins/: mod.rs  plugin_api.rs
backend/microservices/vertices/src/plugins/plugins_builtin/: README.md
backend/microservices/vertices/src/vertices/: handlers.rs  mod.rs  vertex_api.rs  vertex_config.rs  vertex_interface.rs  vertex_manager.rs
backend/microservices/vertices/tests/: REAME.md
backend/monitoring-analytics/: README.md
backend/shared/: README.md
backend/vertec/: Cargo.toml  README.md
backend/vertec/src/: main.rs
frontend/microservices/network-composition-ui/: README.md
frontend/microservices/vertex-management-ui/: README.md
