[package]
name = "vertex-management-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.3"
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = {version = "1.3.3", features=["serde", "v4"] }

  
